[package]
name = "biggrepper"
version = "1.1.0"
authors = ["nrunyan@unm.edu"]
license = "MIT OR Apache-3.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/nrunyan/BigGrepper"
repository = "https://github.com/nrunyan/BigGrepper"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={version = "4.0",features=["derive"]}


